objects/Opportunity_Snapshot__c.object
<CustomObject>
    <label>Opportunity Snapshot</label>
    <nameField>
        <label>Opportunity Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue rec date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Stage__c</fullName>
        <label>To Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Stage__c</fullName>
        <label>From Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_name__c</fullName>
        <label>Account name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Duration__c</fullName>
        <label>Stage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_name__c</fullName>
        <label>Territory name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_rec_date__c</fullName>
        <label>Revenue rec date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>